<resources>
    <string name="app_name">login2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_registration">registration</string>
    <string name="string_enter_name">Enter your name</string>
    <string name="string_choose_username">Choose your username</string>
    <string name="string_choose_password">Choose your password</string>
    <string name="string_enter_email">Enter your email</string>
    <string name="button_register">Register</string>
    <string name="string_already_registered">Already Registered</string>
    <string name="button_login">Login</string>
    <string name="title_activity_activity_login">ActivityLogin</string>
    <string name="string_username">Enter Username</string>
    <string name="textview_password">Enter Password</string>
    <string name="string_user_login">Login</string>



</resources>
