<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/string_enter_name"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/editTextName"/>

    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/string_choose_username"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/editTextUserName"/>

    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/string_choose_password"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/editTextPassword"
        android:inputType="textPassword"/>

    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/string_enter_email"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/editTextEmail"
        android:inputType="textEmailAddress"/>

    <Button android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/button_register"
        android:id="@+id/buttonRegister"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/string_already_registered" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:id="@+id/buttonLogin" />


</LinearLayout>
